src/components/download-links/style.scss
download-links {
  position: relative;
  margin-left: auto;

  svg {
    width: 1.25rem;
    height: 1.25rem;
    fill: rgba(255,255,255,.8);
  }

  button- {
    display: flex;
    height: 100%;
    align-items: center;
    color: rgba(255,255,255,.8);
    padding: 0 1rem;
    cursor: default;
    border-left: 1px solid #000;
    &:hover {
      background: rgba(255,255,255,0.05);
    }
    > *+* {
      margin-left: .5rem;
    }
  }

  &.open div {
    position: absolute;
    top: 100%;
    display: block;
    z-index: 10;
    left: 2rem;
  }

  a {
    background: #212121;
    padding: 1rem;
    color: rgba(255,255,255,0.5);

    &:hover {
      background: #424242;
      color: rgba(255,255,255,1);
    }
  }

  div {
    display: none;
  }
}

